color-api/dev/use-dev-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: color-api
spec:
  template:
    spec:
      containers:
      - name: color-api
        image: arymothieu742/color-api:2.1.1-dev
