color-api/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: color-api-dev
    kubernetes.io/ingress.class: 'gce'
    networking.gke.io/managed-certificates: dev-mc
spec:
  rules:
  - host: dev.socolourful.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /*
        backend:
          service:
            name: color-svc-np
            port: 
              number: 80
